--- a/pom.xml
+++ b/pom.xml
@@ -7,13 +7,30 @@
     <groupId>test.poi</groupId>
     <artifactId>poi.app</artifactId>
     <version>1.0-SNAPSHOT</version>
+
     <dependencies>
+
         <!-- http://mvnrepository.com/artifact/org.apache.poi/poi-ooxml -->
         <dependency>
             <groupId>org.apache.poi</groupId>
             <artifactId>poi-ooxml</artifactId>
             <version>3.14</version>
         </dependency>
+
+        <!-- http://mvnrepository.com/artifact/org.apache.poi/poi-ooxml-schemas -->
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml-schemas</artifactId>
+            <version>3.14</version>
+        </dependency>
+
+        <!-- http://mvnrepository.com/artifact/org.docx4j/docx4j -->
+        <dependency>
+            <groupId>org.docx4j</groupId>
+            <artifactId>docx4j</artifactId>
+            <version>3.3.0</version>
+        </dependency>
+
 
     </dependencies>
 
